about us we are source of added.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,18 @@
                     <p class="about-hero-description" data-animate="fade-up" data-delay="0.3s">
                         In Hindi and Sanskrit, ‘<strong>Srot</strong>’ means ‘<strong>Source</strong>’.
                         <br>
-                        For us, SROT is: <strong>Source</strong> of <strong>Regeneration</strong>, <strong>Opportunities</strong>, and <strong>Transformation</strong>.
+                        For us, SROT is: <strong>S</strong>ource of <strong>R</strong>egeneration, <strong>O</strong>pportunities, and <strong>T</strong>ransformation.
                     </p>
                 </div>
+            </div>
+            <div class="container source-showcase" data-animate="fade-up" data-source-showcase data-interval="1500">
+                <p class="source-showcase-heading">
+                    <span class="source-showcase-label">We are a Source of</span>
+                    <span class="source-showcase-rotator" data-source-rotator data-words="efforts,research,training,knowledge,empowerment,opportunity,idea,community,ecology" aria-live="polite">
+                        efforts
+                    </span>
+                </p>
+                <div class="source-showcase-placeholder" role="img" aria-label="Placeholder for an image related to the source of impact"></div>
             </div>
         </section>
 
