aboutus and our work page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     </p>
                 </div>
             </div>
+        </section>
+
+        <section class="source-showcase-section">
             <div class="container source-showcase" data-animate="fade-up" data-source-showcase data-interval="1500">
                 <p class="source-showcase-heading">
                     <span class="source-showcase-label">We are a Source of</span>
@@ -54,8 +57,252 @@
             </div>
         </section>
 
+        <!-- ===== Section: Our Essence ===== -->
+        <section class="essence-section" data-section="essence">
+            <div class="container" data-animate="fade-up">
+                <h2 class="essence-title">Our Essence</h2>
+                <p class="essence-description">
+                    SROT is a collective initiative that weaves architecture, education, and ecology into a shared fabric of resilience.
+                    We collaborate with artisans, workers, designers and students to revive indigenous knowledge, re-imagine infrastructure,
+                    and shape spaces that emerge from the land and root themselves in the lives of those who inhabit them.
+                </p>
+                <div class="essence-placeholder-grid" aria-hidden="true">
+                    <div class="essence-placeholder" role="img" aria-label="Image placeholder card" data-animate="slide-up"></div>
+                    <div class="essence-placeholder" role="img" aria-label="Image placeholder card" data-animate="slide-up" data-delay="0.1s"></div>
+                    <div class="essence-placeholder" role="img" aria-label="Image placeholder card" data-animate="slide-up" data-delay="0.2s"></div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="vision-mission-section">
+            <div class="container">
+                <div class="vision-block" data-animate="fade-up">
+                    <h2 class="vision-title">Our Vision</h2>
+                    <p class="vision-description">
+                        We envision a world where built environments are not imposed, but emerge, organically, ecologically,
+                        and equitably. Where settlements grow in conversation with landscapes, and every design gives back to land,
+                        life, and nature.
+                    </p>
+                    <p class="vision-quote">“SROT exists to restore, nurture, and empower natural landscapes and communities.”</p>
+                </div>
+                <div class="mission-block" data-animate="fade-up" data-delay="0.15s">
+                    <h2 class="mission-title">Our Mission</h2>
+                    <div class="mission-grid" aria-hidden="true">
+                        <article class="mission-card">
+                            <div class="mission-card-placeholder" role="img" aria-label="Regeneration placeholder" data-animate="slide-up"></div>
+                            <h3>Regeneration</h3>
+                            <p>Restore land and livelihoods through natural building.</p>
+                        </article>
+                        <article class="mission-card">
+                            <div class="mission-card-placeholder" role="img" aria-label="Opportunities placeholder" data-animate="slide-up" data-delay="0.1s"></div>
+                            <h3>Opportunities</h3>
+                            <p>Train and empower artisans, students, and rural youth.</p>
+                        </article>
+                        <article class="mission-card">
+                            <div class="mission-card-placeholder" role="img" aria-label="Transformation placeholder" data-animate="slide-up" data-delay="0.2s"></div>
+                            <h3>Transformation</h3>
+                            <p>Re-imagine education and design as tools for ecological healing.</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="principles-section">
+            <div class="container" data-animate="fade-up">
+                <h2 class="principles-title">Our Principles</h2>
+                <div class="principles-grid">
+                    <article class="principle-card">
+                        <span class="principle-accent" aria-hidden="true"></span>
+                        <div class="principle-copy">
+                            <h3>Soil First</h3>
+                            <p>We build with what the earth gives us, mud, lime, stone, wood, not chemicals.</p>
+                        </div>
+                    </article>
+                    <article class="principle-card">
+                        <span class="principle-accent" aria-hidden="true"></span>
+                        <div class="principle-copy">
+                            <h3>Architecture as Ecology</h3>
+                            <p>We design as part of ecosystems, not just for humans, but with all living systems in mind.</p>
+                        </div>
+                    </article>
+                    <article class="principle-card">
+                        <span class="principle-accent" aria-hidden="true"></span>
+                        <div class="principle-copy">
+                            <h3>Learning as Liberation</h3>
+                            <p>We believe education is a right, not a privilege. Free workshops, open labs, inclusive studios and hands-on learning for all.</p>
+                        </div>
+                    </article>
+                    <article class="principle-card">
+                        <span class="principle-accent" aria-hidden="true"></span>
+                        <div class="principle-copy">
+                            <h3>Craft as Culture</h3>
+                            <p>Every skill is a legacy. We honor every artisan and every fingerprint on the wall.</p>
+                        </div>
+                    </article>
+                    <article class="principle-card">
+                        <span class="principle-accent" aria-hidden="true"></span>
+                        <div class="principle-copy">
+                            <h3>People as Partners</h3>
+                            <p>Communities are not beneficiaries; they are collaborators, mentors, and co-designers.</p>
+                        </div>
+                    </article>
+                    <article class="principle-card">
+                        <span class="principle-accent" aria-hidden="true"></span>
+                        <div class="principle-copy">
+                            <h3>Living as Sustenance</h3>
+                            <p>To live sustainably is to live in a way that nourishes life itself, our bodies, our communities, and the environment.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="legal-foundation-section">
+            <div class="container" data-animate="fade-up">
+                <h2 class="legal-title">Our Legal Foundation</h2>
+                <p class="legal-description">
+                    We are a not-for-profit Section 8 company dedicated to advancing regenerative architecture and equitable design.
+                    Every clause in our foundation reflects a promise, to heal, include, and sustain.
+                </p>
+                <div class="legal-grid">
+                    <article class="legal-card">
+                        <div class="legal-card-header">
+                            <span class="legal-dot" aria-hidden="true"></span>
+                            <h3>Regenerative Design</h3>
+                        </div>
+                        <p>Promoting architecture that grows from the earth, natural, site-sourced, and cyclical.</p>
+                    </article>
+                    <article class="legal-card">
+                        <div class="legal-card-header">
+                            <span class="legal-dot" aria-hidden="true"></span>
+                            <h3>Knowledge &amp; Revival</h3>
+                        </div>
+                        <p>Documenting and reviving indigenous building systems and vernacular wisdom.</p>
+                    </article>
+                    <article class="legal-card">
+                        <div class="legal-card-header">
+                            <span class="legal-dot" aria-hidden="true"></span>
+                            <h3>Training &amp; Research</h3>
+                        </div>
+                        <p>Establishing multidisciplinary centres that blend craft, ecology, and innovation.</p>
+                    </article>
+                    <article class="legal-card">
+                        <div class="legal-card-header">
+                            <span class="legal-dot" aria-hidden="true"></span>
+                            <h3>Livelihood &amp; Dignity</h3>
+                        </div>
+                        <p>Empowering artisans, craftspeople, and rural youth through skill-based opportunities.</p>
+                    </article>
+                    <article class="legal-card">
+                        <div class="legal-card-header">
+                            <span class="legal-dot" aria-hidden="true"></span>
+                            <h3>Inclusive Participation</h3>
+                        </div>
+                        <p>Co-creating with communities through participatory and empathetic design approaches.</p>
+                    </article>
+                    <article class="legal-card">
+                        <div class="legal-card-header">
+                            <span class="legal-dot" aria-hidden="true"></span>
+                            <h3>Climate Responsibility</h3>
+                        </div>
+                        <p>Advocating for low-carbon, culturally rooted, climate-sensitive construction practices.</p>
+                    </article>
+                </div>
+                <a class="legal-download" href="#" download>Download full object clause</a>
+            </div>
+        </section>
+
+
+        <section class="impact-section" data-section="impact">
+            <div class="container">
+                <h2 class="impact-title">Our Impact</h2>
+                <div class="impact-metrics">
+                    <article class="impact-card">
+                        <span class="impact-number" data-counter data-counter-target="9" data-counter-suffix="+">0</span>
+                        <p class="impact-label">Teaching events</p>
+                    </article>
+                    <article class="impact-card">
+                        <span class="impact-number" data-counter data-counter-target="12" data-counter-suffix="+">0</span>
+                        <p class="impact-label">Community served</p>
+                    </article>
+                    <article class="impact-card">
+                        <span class="impact-number" data-counter data-counter-target="300" data-counter-suffix="+">0</span>
+                        <p class="impact-label">Lives transformed</p>
+                    </article>
+                    <article class="impact-card">
+                        <span class="impact-number" data-counter data-counter-target="1" data-counter-static="X-" aria-label="Carbon Footprint reduced">0</span>
+                        <p class="impact-label">Carbon Footprint</p>
+                    </article>
+                    <article class="impact-card">
+                        <span class="impact-number" data-counter data-counter-target="5" data-counter-suffix="+">0</span>
+                        <p class="impact-label">SDGs aligned</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+
 
         <!-- ===== Section: Our Work ===== -->
+        <section id="work" class="work-section" data-section="work">
+            <div class="container">
+                <div class="work-overview" data-animate="fade-up">
+                    <h2 class="work-title">What we do?</h2>
+                    <div class="work-pillars">
+                        <article class="work-pillars-item">
+                            <span class="work-pillars-icon work-pillars-icon--circle" aria-hidden="true"></span>
+                            <div>
+                                <h3>Explain the idea</h3>
+                                <p>Writing for websites is both simple and complex. On the one hand, all you need to do is say what you mean and in your words.</p>
+                            </div>
+                        </article>
+                        <article class="work-pillars-item">
+                            <span class="work-pillars-icon work-pillars-icon--diamond" aria-hidden="true"></span>
+                            <div>
+                                <h3>In small parts</h3>
+                                <p>Are you thinking of keywords you should rank for? Are you including links in your text to additional information?</p>
+                            </div>
+                        </article>
+                        <article class="work-pillars-item">
+                            <span class="work-pillars-icon work-pillars-icon--triangle" aria-hidden="true"></span>
+                            <div>
+                                <h3>With more detail</h3>
+                                <p>There’s a theory that people read in an F-shaped pattern, and that this should influence how you structure content on your website.</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="work-cards" data-animate="fade-up" data-delay="0.1s">
+                    <article class="work-card">
+                        <div class="work-card-media" role="img" aria-label="Projects placeholder image"></div>
+                        <div class="work-card-body">
+                            <h3>Projects</h3>
+                            <p>Call out a feature, benefit, or value of your site or product that can stand on its own.</p>
+                            <a href="#" class="btn-link">Learn more</a>
+                        </div>
+                    </article>
+                    <article class="work-card">
+                        <div class="work-card-media" role="img" aria-label="Teaching events placeholder image"></div>
+                        <div class="work-card-body">
+                            <h3>Teaching Events</h3>
+                            <p>Call out a feature, benefit, or value of your site or product that can stand on its own.</p>
+                            <a href="#" class="btn-link">Learn more</a>
+                        </div>
+                    </article>
+                    <article class="work-card">
+                        <div class="work-card-media" role="img" aria-label="Training center placeholder image"></div>
+                        <div class="work-card-body">
+                            <h3>Training Center</h3>
+                            <p>Call out a feature, benefit, or value of your site or product that can stand on its own.</p>
+                            <a href="#" class="btn-link">Learn more</a>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
        
         <!-- ===== Section: Team ===== -->
         
