Add form submission status indicators and validation to contact form

--- a/index.html
+++ b/index.html
@@ -738,6 +738,10 @@
                             <label for="message">Your message...</label>
                             <textarea id="message" name="message" rows="5" required placeholder="Let us know how we can help you."></textarea>
                         </div>
+                        <div id="form-status" class="form-status" aria-live="polite">
+                            <span class="form-status__spinner" aria-hidden="true"></span>
+                            <span>Sending your message...</span>
+                        </div>
                         <button type="submit" class="submit-button">Send message</button>
                     </form>
                     <div class="contact-details">
